--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,10 @@
 
 body {
     background-color: #9742ff;
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
 nav ul {
@@ -40,10 +44,9 @@ nav li:first-child {
     right: -50px;
     height: 100vh;
     width: 350px;
-    position: relative;
+    position: fixed;
     justify-content: flex-start;
     align-items: flex-start;
-    position: fixed;
     background-color: whitesmoke;
 }
 
@@ -74,6 +77,7 @@ nav li:first-child {
 @media (max-width: 400px) {
     .sidebar {
         width: 100%;
+        height: 50%;
     }
 }
 
@@ -92,17 +96,17 @@ nav li:first-child {
     color: white;
     padding-top: 150px;
 }
-.footer .btn{
+
+.footer .btn {
     height: 40px;
     width: 130px;
     color: white;
-    background-color:#492c6c;
+    background-color: #492c6c;
     border: solid white;
     border-radius: 4px;
     margin: 10px 0px;
     padding: 8px 0px;
     text-decoration: none;
-
 }
 
 /* cards */
@@ -141,33 +145,70 @@ nav li:first-child {
     border-radius: 4px;
     padding: 2px 15px;
 }
-.footer-container{
+
+.footer-container {
+    background-color: #360d67;
+    color: white;
+    padding: 20px;
+}
+
+.footer {
     display: flex;
-    width: 100vw;
-    height: 200px;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
+    padding-top: 20px;
+    flex-wrap: wrap;
+}
+
+.footer-item {
+    text-align: center;
+    flex: 1;
+    position: relative;
+    padding: 0 20px;
+}
+
+.footer-item:not(:last-child)::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 60%;
+    transform: translateY(-50%);
+    height: 60%;
+    width: 1px;
+    opacity: 0.75;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+
+.handles {
+    list-style: none;
+    padding: 0;
+}
+
+.handles li {
+    display: inline-block;
+    margin: 0 10px;
+}
+
+.handles i {
+    font-size: 30px;
     color: white;
-    background-color: #492c6c;
-    font-size: larger;
 }
-.footer{
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    width: 300px;
-}
-.socials{
-    display: flex;
-    flex-direction: row;
-    margin: 10px;
-    justify-content: space-between;
-}
-.socials li{
-  list-style: none;
-}
-.socials a{
+
+.btn {
+    display: inline-block;
+    background-color: #9742ff;
+    color: white;
+    padding: 10px 20px;
     text-decoration: none;
-    color: white;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.btn:hover {
+    background-color: #7641d9;
+}
+
+.footer-container p {
+    text-align: center;
+    margin-top: 20px;
 }
